--- a/src/app/admin/carrier-rule-config/carrier-rule-config.component.html
+++ b/src/app/admin/carrier-rule-config/carrier-rule-config.component.html
@@ -29,6 +29,15 @@
           <button pButton type="button" label="Cancel"></button>
         </div>
       </div>
+      <div class="row">
+        <p-dataTable [value]="gridData"  (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)" dataKey="vin">
+            <p-column [style]="{'width':'38px'}" selectionMode="multiple"></p-column>
+          <p-column field="vin" header="Vin" ></p-column>
+          <p-column field="year" header="Year"></p-column>
+          <p-column field="brand" header="Brand"></p-column>
+          <p-column field="color" header="Color"></p-column>
+      </p-dataTable>
+      </div>
     </div>
    </form> 
    {{CRCform.value | json}}
