Added compnent files

--- a/src/app/shared/left-menu/left-menu.component.html
+++ b/src/app/shared/left-menu/left-menu.component.html
@@ -6,6 +6,7 @@
   <ul class="nav nav-sidebar">
     <li><a routerLink="/rule-list">Clinical Rules</a></li>
     <li><a routerLink="/CRC">Carrier Rule Config</a></li>
+    <li><a routerLink="/TWC">Turn On Off Watcher</a></li>
     
      
   </ul>
