Changes related to turnon off changes

--- a/src/app/admin/turn-on-off-watcher/turn-on-off-watcher.component.html
+++ b/src/app/admin/turn-on-off-watcher/turn-on-off-watcher.component.html
@@ -1,3 +1,10 @@
-<p>
-  turn-on-off-watcher works!
-</p>
+<div> <label  >Rxtranswatcher service</label> 
+  <p-inputSwitch onLabel="Yes" offLabel="No" [(ngModel)]="IsRxtranswatcher"></p-inputSwitch>
+</div>
+<div> <label>RulesEngineWatcher service </label>  
+  <p-inputSwitch onLabel="Yes" offLabel="No" [(ngModel)]="IsRulesEngineWatcher"></p-inputSwitch>
+</div>
+<div>
+  <label>WorkFlowWatcher service</label>
+  <p-inputSwitch onLabel="Yes" offLabel="No" [(ngModel)]="IsWorkFlowWatcher"></p-inputSwitch>
+</div>
