Included Shared message service and modified turoff.

--- a/src/app/admin/turn-on-off-watcher/turn-on-off-watcher.component.html
+++ b/src/app/admin/turn-on-off-watcher/turn-on-off-watcher.component.html
@@ -1,10 +1,24 @@
-<div> <label  >Rxtranswatcher service</label> 
-  <p-inputSwitch onLabel="Yes" offLabel="No" [(ngModel)]="IsRxtranswatcher"></p-inputSwitch>
+<div class="row">
+  <div class="col-md-2">
+    <label>Rxtranswatcher service</label>
+  </div>
+  <div class="col-md-2">
+    <p-inputSwitch onLabel="Yes" offLabel="No" [(ngModel)]="IsRxtranswatcher"></p-inputSwitch>
+  </div>
 </div>
-<div> <label>RulesEngineWatcher service </label>  
-  <p-inputSwitch onLabel="Yes" offLabel="No" [(ngModel)]="IsRulesEngineWatcher"></p-inputSwitch>
+<div class="row">
+  <div class="col-md-2">
+    <label>RulesEngineWatcher service </label>
+  </div>
+  <div class="col-md-2">
+    <p-inputSwitch onLabel="Yes" offLabel="No" [(ngModel)]="IsRulesEngineWatcher"></p-inputSwitch>
+  </div>
 </div>
-<div>
-  <label>WorkFlowWatcher service</label>
-  <p-inputSwitch onLabel="Yes" offLabel="No" [(ngModel)]="IsWorkFlowWatcher"></p-inputSwitch>
+<div class="row">
+  <div class="col-md-2">
+    <label>WorkFlowWatcher service</label>
+  </div>
+  <div class="col-md-2">
+    <p-inputSwitch onLabel="Yes" offLabel="No" [(ngModel)]="IsWorkFlowWatcher"></p-inputSwitch>
+  </div>
 </div>
