--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,7 +13,10 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-   
+      <div class="nav navbar-nav navbar-left" style="padding-left:250px;padding-top:14px;" >
+        <h4>{{Message}}</h4>
+       
+      </div>
       
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
