added monitoring metrics

--- a/src/app/shared/left-menu/left-menu.component.html
+++ b/src/app/shared/left-menu/left-menu.component.html
@@ -7,7 +7,7 @@
     <li><a routerLink="/rule-list">Clinical Rules</a></li>
     <li><a routerLink="/CRC">Carrier Rule Config</a></li>
     <li><a routerLink="/TWC">Turn On Off Watcher</a></li>
-    
+    <li><a routerLink="/Mmetrics">Monitoring Metrics</a></li>
      
   </ul>
 </div><div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
