Added feature export to excel in rule list page

--- a/src/app/admin/rule-list/rule-list.component.html
+++ b/src/app/admin/rule-list/rule-list.component.html
@@ -19,7 +19,7 @@
   <p-header>
     <div class="ui-helper-clearfix" style="width:100%">
    <button type="submit" pButton icon="fa-plus" style="float:left" (click)="showDialogToAdd()" label="Add New Rule"></button>
-   <button type="Button" pButton icon="" style="float:left"  (click)="exportToExcel()" label="Export to excel"></button>
+   <button type="Button" pButton icon="" style="float:left"  (click)="exportToExcel(dt)" label="Export to excel"></button>
   </div>
   </p-header>  
  
