--- a/src/app/admin/rule-list/rule-list.component.html
+++ b/src/app/admin/rule-list/rule-list.component.html
@@ -31,7 +31,7 @@
  </p-column>  -->
 </p-dataTable>
 
- <p-dialog header="Rules Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">  
+ <!-- <p-dialog header="Rules Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">  
 <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="Rules">
       <div class="ui-grid-row">
           <div class="ui-grid-col-4"><label for="RullNo">RullNo</label></div>
@@ -58,4 +58,4 @@
         </p-footer>   
 </div>
           
- </p-dialog>  
+ </p-dialog>   -->
