--- a/src/app/admin/carrier-rule-config/carrier-rule-config.component.html
+++ b/src/app/admin/carrier-rule-config/carrier-rule-config.component.html
@@ -30,12 +30,28 @@
         </div>
       </div>
       <div class="row">
-        <p-dataTable [value]="gridData"  (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)" dataKey="vin">
-            <p-column [style]="{'width':'38px'}" selectionMode="multiple"></p-column>
-          <p-column field="vin" header="Vin" ></p-column>
+        <p-dataTable [value]="gridData"   [(selection)]="selectedCars3" dataKey="vin" [paginator]="true" [rows]="5"   (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)" dataKey="vin">
+           
+            <p-column [style]="{'width':'38px'}"  selectionMode="multiple"></p-column>
+          <p-column field="vin" header="Vin" >
+            
+          </p-column>
           <p-column field="year" header="Year"></p-column>
           <p-column field="brand" header="Brand"></p-column>
           <p-column field="color" header="Color"></p-column>
+       
+
+          <p-column header="Cities">
+            <ng-template let-car="rowData" pTemplate="body">
+              <p-multiSelect [options]="cities"  formArrayName="selectedCities"  (onChange)="onChangeofCities($event,car)" optionLabel="name"></p-multiSelect>
+            </ng-template>
+        </p-column>
+        <p-footer>
+          <ul>
+              <li *ngFor="let car of selectedCars3" style="text-align: left">{{car.vin + ' - ' + car.brand + ' - ' + car.year + ' - ' + car.color}}  </li>
+          </ul>
+      </p-footer>
+            
       </p-dataTable>
       </div>
     </div>
