--- a/src/app/admin/claimant-history/claimant-history.component.html
+++ b/src/app/admin/claimant-history/claimant-history.component.html
@@ -1,3 +1,30 @@
+<div class="row">
+  <div class="col-md-12">
+      <div class="col-md-2"><label><b>Claimant ID:</b></label></div>
+      <div class="col-md-4"><input id="input" type="text" size="50" pInputText [(ngModel)]="text1" placeholder="Claimant ID"></div>
+      <div class="col-md-2"><label><b>Claim ID:</b></label></div>
+      <div class="col-md-4"> <input id="input" type="text" size="50" pInputText [(ngModel)]="text2" placeholder="Claim ID"></div>
+    </div>
+</div>
+<br/>
+<div class="row">
+  <div class="col-md-12">
+      <div class="col-md-2"><label><b>Claimant FirstName:</b></label></div>
+      <div class="col-md-4"><input id="input" type="text" size="50" pInputText [(ngModel)]="text1" placeholder="Claimant FirstName"></div>
+      <div class="col-md-2"><label><b>Claim LastName:</b></label></div>
+      <div class="col-md-4"> <input id="input" type="text" size="50" pInputText [(ngModel)]="text2" placeholder="Claimant LastName"></div>
+    </div>
+</div>
+<br/>
+<div class="row">
+  <div class="col-md-12">
+      <div class="col-md-2"><label><b>Claim Number:</b></label></div>
+      <div class="col-md-4"><input id="input" type="text" size="50" pInputText [(ngModel)]="text1" placeholder="Claim Number"></div>
+      <div class="col-md-2"><label><b>Claim Type:</b></label></div>
+      <div class="col-md-4"> <input id="input" type="text" size="50" pInputText [(ngModel)]="text2" placeholder="Claim Type"></div>
+    </div>
+</div>
+<br/>
 <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
   <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
   <input #gb type="text" pInputText size="30" placeholder="Serach Text">
@@ -12,26 +39,7 @@
     <ng-template let-car pTemplate="rowexpansion">
       <div class="ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px">
         <div class="ui-grid-row">
-          <div class="ui-grid-col-3" style="text-align:center">
-            <i class="fa fa-search" style="cursor:pointer;float:left;margin-top:40px"></i>
-            <img src="assets/showcase/images/demo/car/{{car.brand}}.png">
-          </div>
-          <div class="ui-grid-col-9">
-            <div class="ui-grid ui-grid-responsive ui-grid-pad">
-              <div class="ui-grid-row">
-                <div class="ui-grid-col-2"><label for="brand">ClaimID:</label> </div>
-                <div class="ui-grid-col-10">{{car.ClaimID}}</div>
-              </div>
-              <div class="ui-grid-row">
-                <div class="ui-grid-col-2"><label for="brand">ClaimNumber:</label></div>
-                <div class="ui-grid-col-10">{{car.ClaimNumber}}</div>
-              </div>
-              <div class="ui-grid-row">
-                <div class="ui-grid-col-2"><label for="brand">ClaimType:</label></div>
-                <div class="ui-grid-col-10">{{car.ClaimType}}</div>
-              </div>
-            </div>
-          </div>
+         <claim-details ></claim-details>
         </div>
       </div>
     </ng-template>
