--- a/src/app/admin/monitoring-metrics/monitoring-metrics.component.html
+++ b/src/app/admin/monitoring-metrics/monitoring-metrics.component.html
@@ -55,7 +55,10 @@
      </div>
      <div class="row">
        <div class="col-md-4">
-        <p-chart type="pie" [data]="data" ></p-chart>
+        <p-chart  #ch type="pie" [data]="data" [options]="options"   ></p-chart>
+       </div>
+       <div class="col-md-3">
+         
        </div>
      </div>
    </div>
