child grid loaded filter based

--- a/src/app/admin/claim-details/claim-details.component.html
+++ b/src/app/admin/claim-details/claim-details.component.html
@@ -1,5 +1,5 @@
 <div class="content-section implementation">
-  <p-dataTable [value]="claims" [resizableColumns]="true" (onRowSelect)="onClick($event)">
+  <p-dataTable [value]="claims" [resizableColumns]="true" >
     <p-column field="ClaimID" header="ClaimID" [sortable]="true"></p-column>
     <p-column field="ClaimNumber" header="Claim Number" [sortable]="true"></p-column>
     <p-column field="ClaimType" header="Claim Type" [sortable]="true"></p-column>
