Changes for Folder/module load

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- <app-rule-list></app-rule-list> -->
 <app-header></app-header>
-<app-left-menu></app-left-menu>
+<app-left-menu *ngIf = "pageName=='Admin'" ></app-left-menu>
 <router-outlet></router-outlet>
