--- a/src/app/shared/left-menu/left-menu.component.html
+++ b/src/app/shared/left-menu/left-menu.component.html
@@ -7,7 +7,7 @@
     <li><a routerLink="/rule-list">Clinical Rules</a></li>
     <li><a routerLink="/CRC">Carrier Rule Config</a></li>
     <li><a routerLink="/TWC">Turn On Off Watcher</a></li>
-    <li><a href="/claimant-history">Claimant History</a></li>
+    <li><a routerLink="/claimant-history">Claimant History</a></li>
     
      
   </ul>
