--- a/src/app/admin/rule-list/rule-list.component.html
+++ b/src/app/admin/rule-list/rule-list.component.html
@@ -1,61 +1,81 @@
-<h4 class="first">Rule List page</h4>
+<p-growl [(value)]="msgs"></p-growl>
+<h4 class="first">
+  Rule List page</h4>
 <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
   <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
   <input #gb type="text" pInputText size="30" placeholder="Global Filter">
 </div>
 
- <p-dataTable [value]="Rules"  [rows]="10"[totalRecords]="30" [paginator]="true" [rowsPerPageOptions]="[10,20,30]" [globalFilter]="gb" #dt sortMode="multiple"selectionMode="single" [(selection)]="selectedEmployee" (onRowSelect)="onRowSelect($event)" [responsive]="true" >
-                                                                    
-  <p-column field="RullNo" header="RullNo" [sortable]="true"></p-column>    
+<p-dataTable [value]="Rules" [rows]="10" [totalRecords]="30" [paginator]="true" [rowsPerPageOptions]="[10,20,30]" [globalFilter]="gb"
+  #dt sortMode="multiple" selectionMode="single" [(selection)]="selectedEmployee" (onRowSelect)="onRowSelect($event)" [responsive]="true">
+
+  <p-column field="RullNo" header="RullNo" [sortable]="true"></p-column>
   <p-column field="Name" header="Name" [sortable]="true"></p-column>
-  <p-column field="year" header="Year"[sortable]="true"></p-column>
-  <p-column field="brand" header="Brand"[sortable]="true"></p-column>
-  <p-column field="color" header="Color"[sortable]="true">
-    <ng-template let-col  let-Rules="rowData" pTemplate="body">
-          <span [style.color]="Rules[col.field]">{{Rules[col.field]}}</span>
+  <p-column field="year" header="Year" [sortable]="true"></p-column>
+  <p-column field="brand" header="Brand" [sortable]="true"></p-column>
+  <p-column field="color" header="Color" [sortable]="true">
+    <ng-template let-col let-Rules="rowData" pTemplate="body">
+      <span [style.color]="Rules[col.field]">{{Rules[col.field]}}</span>
     </ng-template>
   </p-column>
-   
+
   <p-header>
+
     <div class="ui-helper-clearfix" style="width:100%">
-   <button type="submit" pButton icon="fa-plus" style="float:left" (click)="showDialogToAdd()" label="Add New Rule"></button>
-   <button type="Button" pButton icon="" style="float:left"  (click)="exportToExcel()" label="Export to excel"></button>
-  </div>
-  </p-header>  
- 
-    <p-column field="Rule Edit" header="Rule Edit"> 
-      <!-- </ng-template>  -->
-       <ng-template let-Rules="rowData" pTemplate="body">
-          <button type="button" pButton  (click)="(Rules)" label="Edit" icon="fa-Edit"></button>
-      </ng-template>
- </p-column>  -->
+      <button type="submit" pButton icon="fa-plus" style="float:left" (click)="showDialogToAdd()" label="Add New Rule"></button>
+      <button type="Button" pButton icon="" style="float:left" (click)="exportToExcel()" label="Export to excel"></button>
+    </div>
+  </p-header>
+
+  <p-column field="Rule Edit" header="Rule Edit">
+    <!-- </ng-template>  -->
+    <ng-template let-Rules="rowData" pTemplate="body">
+      <button type="button" pButton (click)="(Rules)" label="Edit" icon="fa-Edit"></button>
+    </ng-template>
+  </p-column> -->
 </p-dataTable>
 
- <p-dialog header="Rules Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">  
-<div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="Rules">
-      <div class="ui-grid-row">
-          <div class="ui-grid-col-4"><label for="RullNo">RullNo</label></div>
-          <div class="ui-grid-cal-8"><input type="text" pInputText id="RullNo" [(ngModel)]="Rules.RullNo"/></div>
+<p-dialog header="Rules Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">
+  <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="Rules">
+    <div class="ui-grid-row">
+      <div class="ui-grid-col-4">
+        <label for="RullNo">RullNo</label>
       </div>
-        <div class="ui-grid-row">
-          <div class="ui-grid-col-4"><label for="Name">Name</label> </div>
-          <div class="ui-grid-cal-8"><input type="text" pInputText id="Name" [(ngModel)]="Rules.Name"/></div>
+      <div class="ui-grid-cal-8">
+        <input type="text" pInputText id="RullNo" [(ngModel)]="Rules.RullNo" />
       </div>
-         <div class="ui-grid-row">
-          <div class="ui-grid-col-4"><label for="brand">Brand</label></div>
-          <div class="ui-grid-cal-8"><input type="text" pInputText id="Brand" [(ngModel)]="Rules.Brand"/></div>
+    </div>
+    <div class="ui-grid-row">
+      <div class="ui-grid-col-4">
+        <label for="Name">Name</label>
       </div>
-       <div class="ui-grid-row">
-           <div class="ui-grid-col-4"><label for="color">Color</label></div>
-           <div class="ui-grid-cal-8"><input type="text" pInputText id="Color" [(ngModel)]="Rules.Color"/></div>
+      <div class="ui-grid-cal-8">
+        <input type="text" pInputText id="Name" [(ngModel)]="Rules.Name" />
       </div>
-          <p-footer>
-            <div class="ui-dialog-buttonpane ui-helper-clearfix">
-              <button type="button" pButton icon="fa-close" (click)="delete()" label="Delete"></button>
-             <button type="button" pButton icon="fa-check" (click)="save()" label="Save"></button>
-             
-            </div>
-        </p-footer>   
-</div>
-          
- </p-dialog>  
+    </div>
+    <div class="ui-grid-row">
+      <div class="ui-grid-col-4">
+        <label for="brand">Brand</label>
+      </div>
+      <div class="ui-grid-cal-8">
+        <input type="text" pInputText id="Brand" [(ngModel)]="Rules.Brand" />
+      </div>
+    </div>
+    <div class="ui-grid-row">
+      <div class="ui-grid-col-4">
+        <label for="color">Color</label>
+      </div>
+      <div class="ui-grid-cal-8">
+        <input type="text" pInputText id="Color" [(ngModel)]="Rules.Color" />
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button type="button" pButton icon="fa-close" (click)="delete()" label="Delete"></button>
+        <button type="button" pButton icon="fa-check" (click)="save()" label="Save"></button>
+
+      </div>
+    </p-footer>
+  </div>
+
+</p-dialog>
