--- a/src/app/admin/rule-list/rule-list.component.html
+++ b/src/app/admin/rule-list/rule-list.component.html
@@ -1,4 +1,8 @@
 <h4 class="first">Rule List page</h4>
+<!-- <ng4-loading-spinner [threshold]="1000" [template]="template" 
+[loadingText]="'Please wait...'" [zIndex]="999" ></ng4-loading-spinner>
+
+<img src="images/common-loader.gif"> -->
 <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
   <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
   <input #gb type="text" pInputText size="30" placeholder="Global Filter">
@@ -21,6 +25,8 @@
    <button type="submit" pButton icon="fa-plus" style="float:left" (click)="GotoRulesConfiguration()" label="Add New Rule"></button>
    <button type="Button" pButton icon="" style="float:left"  (click)="exportToExcel()" label="Export to excel"></button>
   </div>
+  <p-progressSpinner [style]="{width: '50px', height: '50px'}" [hidden]="value" strokeWidth="8" fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+  
   </p-header>  
     
     <p-column field="Rule Edit" header="Rule Edit"> 
