A sample d3 graph page

--- a/src/app/shared/left-menu/left-menu.component.html
+++ b/src/app/shared/left-menu/left-menu.component.html
@@ -10,6 +10,7 @@
     <li><a href="/claimant-history">Claimant History</a></li>
     
     <li><a routerLink="/Mmetrics">Monitoring Metrics</a></li>
+    <li><a routerLink="/D3Graph">D3Graph</a></li>
      
   </ul>
 </div><div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
